# projetcpp

ETAPE08A/Classes/: Classroom.cpp
ETAPE08B/Classes/: Classroom.cpp  Event.cpp  Group.cpp  Group.h  Professor.cpp  Professor.h  Schedulable.cpp  Schedulable.h  Time.cpp  Time.h
ETAPE10/: CMakeLists.txt
ETAPE10/includes/: Event.h  Group.h  Schedulable.h  applichorairewindow.h
ETAPE12/: CMakeLists.txt  classrooms.csv  groups.csv  professors.csv
ETAPE12/includes/: Classroom.h  Course.h  Event.h  Exception.h  Professor.h  Time.h  TimeException.h  Timetable.h  Timing.h  TimingException.h  XmlFileSerializer.hpp  XmlFileSerializer.ipp  XmlFileSerializerException.h  ui_applichorairewindow.h
ETAPE12/sources/: Course.cpp  Event.cpp  Exception.cpp  Group.cpp  Professor.cpp  Schedulable.cpp  Time.cpp  TimeException.cpp  Timetable.cpp  Timing.cpp  TimingException.cpp  XmlFileSerializerException.cpp  applichorairewindow.cpp  main.cpp
